--- a/main.html
+++ b/main.html
@@ -11,6 +11,30 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div class="holder">
+		<div style="width: 80px; background-color: red;">
+			1
+		</div>
+		<div style="width: 80px; background-color: blue;">
+			2
+		</div>
+		<div style="width: 80px; background-color: green;">
+			3
+		</div>
+		<div style="width: 80px; background-color: green;">
+			3
+		</div>
+		<div style="width: 80px; background-color: green;">
+			3
+		</div>
+		<div style="width: 80px; background-color: green;">
+			3
+		</div>
+		<div style="width: 80px; background-color: green;">
+			3
+		</div>
+	</div>
+
 </body>
 
 </html>
